#7 Fix dependencies target of Makefile template
- Always fetch the last version of the scripts.
- Get the dependencies of all packages in repository

--- a/{{cookiecutter.agent_name}}/Makefile
+++ b/{{cookiecutter.agent_name}}/Makefile
@@ -5,7 +5,8 @@ SCRIPTS_PATH:=$(CURDIR)/../scripts-build-go/script
 .PHONY: build check ci dependencies test
 
 dependencies:
-	go get -v -d "github.com/crucibuild/scripts-build-go" .
+	go get -v -d -u "github.com/crucibuild/scripts-build-go"
+	go get -v -d ./...
 
 build: dependencies
 	$(SCRIPTS_PATH)/resource.sh "$(CURDIR)/resources.go" resources/* schema/*
